Fix address search in dark mode.

--- a/static/sass/layout/_leaflet.scss
+++ b/static/sass/layout/_leaflet.scss
@@ -3,6 +3,10 @@
   height: 100%;
 }
 
+.leaflet-container {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
+
 .leaflet-control-custom a {
   display: flex !important;
   justify-content: center;
@@ -10,6 +14,51 @@
 
   .material-icons {
     font-size: 20px;
+  }
+}
+
+.leaflet-control-geosearch {
+  form {
+    border: 0;
+    border-radius: 4px !important;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
+  }
+
+  a.reset {
+    border-radius: 4px;
+  }
+
+  .results.active {
+    font-size: 13px;
+    border: 0;
+    padding-top: 0;
+
+    &:after {
+      border: 0;
+    }
+  }
+
+  .results > :hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 1px solid transparent;
+  }
+}
+
+.dark .leaflet-control-geosearch {
+  form, a.reset, .results {
+    background-color: $overlay-color-dark-1;
+  }
+
+  a.reset {
+    color: $text-color-dark;
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.25);
+    }
+  }
+
+  .results > :hover {
+    background-color: rgba(255, 255, 255, 0.25);
   }
 }
 
